Added users authentication